# llm-converter

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
app/: __main__.py  config.py  models.py  routes.py
app/services/: anthropic_service.py  auto_service.py  cohere_service.py  mistral_service.py  openai_service.py  service_manager.py
cli/: __main__.py  cli_terminal.py
cli/tests/: test_knowledge.py  test_tools.py
data/: anthropic_models.json  cohere_models.json  mistral_models.json  openai_models.json
tests/: test_conversions.py
